--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,13 @@ services:
     ports:
       - 9222:9222
     tty: true
-  chrome:
-    image: seleniarm/standalone-chromium:latest
-    shm_size: 2gb
-    depends_on:
-      - web
-    ports:
-      - "4444:4444"
-      - "7900:7900"
+#  chrome:
+#    image: seleniarm/standalone-chromium:latest
+#    shm_size: 2gb
+#    depends_on:
+#      - web
+#    ports:
+#      - "4444:4444"
+#      - "7900:7900"
+
+
